--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cartes-menjar",
-  "homepage": "https://nuriamafe.github.io/cartes-menjar",
+  "homepage": "https://nuriamafe.github.io/fam",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
